openshift/templates/envoy-config.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/v1" }
                          route:
                            cluster: backend
                        - match: { prefix: "/health" }
                          route:
                              cluster: backend
                        - match: { prefix: "/" }
                          route: { cluster: frontend }
                http_filters:
                - name: envoy.router
  clusters:
    - name: frontend
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      hosts:
      - socket_address:
          address: nmp-msa-frontend
          port_value: 5001
    - name: backend
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      hosts:
        - socket_address:
            address: nmp-msa-backend
            port_value: 8080
